Fix jump button for roll template result

--- a/css/biglog.scss
+++ b/css/biglog.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 #chat-popout {
 	.none {
@@ -49,7 +49,7 @@
 			position: relative;
 			margin-bottom: 10px;
 
-			input[type="text"] {
+			input[type='text'] {
 				position: relative;
 				padding: 15px 40px 15px 15px;
 				color: #525252;
@@ -112,6 +112,13 @@
 
 						.content {
 							margin-right: 3px;
+						}
+
+						&.roll {
+							.jump {
+								position: absolute;
+								width: auto;
+							}
 						}
 					}
 
